--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 PORT=5000
-MONGODB_URI=mongodb+srv://yuvasree194:Yuvasree%407.@cluster0.hycrc2x.mongodb.net/motivatr?retryWrites=true&w=majority&appName=Cluster0
+MONGODB_URI=mongodb+srv:username/password
 PORT=5000
